@@ -123,6 +123,9 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
   which an item may be sent manually and states in which an item will be sent automatically.  Take care that when
   an item is cloned manually, the transitions to tigger on new item will NOT be triggered, this is reserved to
   items cloned automatically
+- Added leading icon 'sent from' that shows on an item if it is the result of another item sent from another
+  configuration.  This way we have the leading icon on the original item with informations about the resulting item
+  and on the resulting item with informations about the original item
 - Added adaptable method MeetingItem._isViewableByPowerObservers that makes it possible to refine
   (restricted) power observers access to an item in addition to
   check on MeetingConfig.item(Restricted)PowerObserversStates
@@ -261,6 +264,7 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
   optional advisers are not automatically the groups that contain users in the "advisers" sub-group but manually selected groups.
   This makes it possible to hide a group that exists for the MeetingConfig.customAdvisers purpose but to which it should not
   be possible to ask an optional adviser. A MeetingGroup may not be deleted if used in this field
+
 
 3.3 (2015-02-27)
 ----------------
